--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -5,6 +5,7 @@ button, .button {
     outline: none;
     border: 0;
     text-decoration: none;
+    text-transform: capitalize;
     padding: 0;
     font-size: 0.9rem;
     line-height: 1;
