--- a/src/styles/elements.css
+++ b/src/styles/elements.css
@@ -42,3 +42,15 @@
     margin: 0 0 0.4rem 0;
 }
 
+@media screen and (max-width:1200px) {
+    .card{
+            width: 45%;
+            margin: 2rem auto;
+        }
+}
+@media screen and (max-width:800px) {
+.card{
+        width: 100%;
+        margin: 2rem auto;
+    }
+}
